@@ -14,15 +14,16 @@ import mobac.program.atlascreators.GlopusMapFile;
 import mobac.program.atlascreators.GoogleEarthOverlay;
 import mobac.program.atlascreators.GpsSportsTracker;
 import mobac.program.atlascreators.MagellanRmp;
+import mobac.program.atlascreators.Maplorer;
 import mobac.program.atlascreators.Maverick;
 import mobac.program.atlascreators.MobileTrailExplorer;
 import mobac.program.atlascreators.MobileTrailExplorerCache;
-import mobac.program.atlascreators.SportsTracker;
 import mobac.program.atlascreators.OSMTracker;
 import mobac.program.atlascreators.OruxMaps;
 import mobac.program.atlascreators.Ozi;
 import mobac.program.atlascreators.PathAway;
 import mobac.program.atlascreators.RMapsSQLite;
+import mobac.program.atlascreators.SportsTracker;
 import mobac.program.atlascreators.TTQV;
 import mobac.program.atlascreators.TrekBuddyCustom;
 import mobac.program.atlascreators.Ublox;
@@ -42,6 +43,7 @@ public enum AtlasOutputFormat {
 	Gmf("Glopus Map File (GMF)", GlopusMapFile.class), // 
 	GpsSportsTracker("GPS Sports Tracker", GpsSportsTracker.class), //
 	Rmp("Magellan (RMP)", MagellanRmp.class), //
+	Maplorer("Maplorer atlas format", Maplorer.class), //
 	Maverick("Maverick atlas format", Maverick.class), //
 	MTE("Mobile Trail Explorer", MobileTrailExplorer.class), //
 	MTECache("Mobile Trail Explorer Cache", MobileTrailExplorerCache.class), //
